# oru

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/skills/save/: SKILL.md
agents/daily-briefing/: .env.template  Dockerfile
agents/daily-briefing/src/: analyzer.py  config.py  main.py  state_bus.py  telegram.py
agents/health/: .env.template  Dockerfile  requirements.txt
agents/health/src/: analyzer.py  config.py  main.py  nudge.py  research.py  telegram.py  workouts.py
agents/self-reflection/: .env.template  Dockerfile  requirements.txt
agents/self-reflection/src/: analyzer.py  config.py  main.py  tasks_hub_client.py  telegram.py
agents/tasks-hub/: .env.template  Dockerfile  README.md  requirements.txt
agents/tasks-hub/src/: backpressure.py  config.py  coordinator.py  debrief.py  events.py  health_aggregator.py  linear_writeback.py  main.py  parsers.py  recurrence.py  reminders_commands.py  store.py  telegram.py
agents/tasks-hub/tests/: conftest.py  test_debrief.py  test_parsers.py  (+3 more)
agents/travel-continuity/: .env.template  Dockerfile  entrypoint.sh  requirements.txt
backup/hermes/: MANIFEST.md  SOUL.md  channel_directory.json  config.yaml
hermes/: backup.sh  install.sh
hermes/briefing/: README.md  cron.json
host-daemons/: com.oru.living-markdown-sync.plist  com.oru.reminders-bridge.plist  com.oru.reminders-commands-watcher.plist  install.sh  living-markdown-sync.sh  reminders-bridge.sh  reminders-commands-watcher.sh  skill-cache-invalidator.sh
specs/: morning-briefing.md
tests/: test_workouts.py
(+58 files in other folders)
