[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-orchestrator"
version = "0.0.1"
description = "Custom orchestrator layer on top of Hermes Agent runtime"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["hermes_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
